# shion

./: README.md  pyproject.toml
src/shion/base/: image_util.py  module_accumulators.py  optimizer_factories.py
src/shion/base/dataset/: lazy_tensor_dataset.py  png_in_dir_dataset.py
src/shion/base/loss/: l1_loss.py  l2_loss.py  sum_loss.py
src/shion/base/training/: single_network.py
src/shion/core/: cached_computation.py  load_save.py  loss.py  module_accumulator.py
src/shion/core/training/: sample_output_protocol.py  training_protocol.py  training_tasks.py  validation_protocol.py
src/shion/nn00/: block_args.py  conv.py  linear_module_args.py  nonlinearity_factories.py  normalization_layer_factories.py  resnet_block.py
